Fix Footer social alignment

--- a/_sass/3-modules/_footer.scss
+++ b/_sass/3-modules/_footer.scss
@@ -250,3 +250,7 @@
     }
   }
 }
+
+.list-reset {
+  margin-left: 0;
+}
